--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^3.2.0",
     "eslint": "^5.6.0",
+    "@svgr/webpack": "^5.5.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
