--- a/package.json
+++ b/package.json
@@ -35,32 +35,35 @@
   },
   "homepage": "https://github.com/cht8687/react-text-collapse#readme",
   "peerDependencies": {
-    "react": ">=0.14",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": ">=0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@svgr/webpack": "^5.5.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.1.0",
-    "@svgr/webpack": "^5.5.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.11.1",
-    "styled-components": "^5.3.3",
+    "style-loader": "^3.3.1",
+    "css-loader": "^6.5.1",
+    "mini-css-extract-plugin": "^2.4.4",
     "html-webpack-plugin": "^5.5.0",
     "standard": "^16.0.4",
+    "styled-components": "^5.3.3",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "prop-types": "^15.7.2"
+    "react-dom": "^17.0.2"
   }
 }
