--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "react-expandable-content",
   "version": "1.0.0",
   "description": "React component to enable text collapse based on a certain height",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "dev": "webpack serve --mode=development",
-    "build": "webpack --progress --config webpack.config.js --mode=production",
+    "build:dist": "babel src --out-dir dist --source-maps --ignore src/example",
+    "build:example": "webpack --progress --config webpack.config.js --mode=production",
     "postbuild": "npm run test -s",
     "coveralls": "npm run coverage -s && coveralls < coverage/lcov.info"
   },
@@ -37,12 +38,13 @@
     "react-dom": "~15 || ~16 || ~17"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.3",
