--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/Logora/react-expandable-content/issues"
   },
   "homepage": "https://github.com/Logora/react-expandable-content#readme",
-  "dependecies": {
+  "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
