--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-expandable-content",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "React component to enable text collapse based on a certain height",
   "main": "./dist/index.js",
   "scripts": {
@@ -33,7 +33,7 @@
     "url": "https://github.com/Logora/react-expandable-content/issues"
   },
   "homepage": "https://github.com/Logora/react-expandable-content#readme",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
